// Entry point of the program.
// Its only job is to start the Menu.
public class Main {

    public static void main(String[] args) {
        Menu menu = new Menu();
        menu.run();
    }
}
