classDiagram
    class Vehicle {
        int id
        String model
        double dailyRate
        boolean available
        +statusText() String
        +displayInfo() void
    }
    class Car {
        int numDoors
        +displayInfo() void
    }
    class Truck {
        double cargoCapacity
        +displayInfo() void
    }
    class Motorcycle {
        boolean hasSidecar
        +displayInfo() void
    }
    class Customer {
        int id
        String name
        String licenseNumber
        +displayInfo() void
    }
    class RentalAgreement {
        int agreementId
        int days
        double totalCost
        +displayInfo() void
    }
    class CostCalculator {
        +calculateCost(double, int)$ double
    }
    class RentalShop {
        Vehicle[] vehicles
        Customer[] customers
        RentalAgreement[] agreements
        int vehicleCount
        int customerCount
        int agreementCount
        +addVehicle(Vehicle) void
        +addCustomer(Customer) void
        +rentVehicle(int, int, int) void
        +returnVehicle(int) void
        +findVehicleById(int) Vehicle
        +showAvailableVehicles() void
        +showAgreements() void
    }
    class Menu {
        Scanner scanner
        RentalShop shop
        +run() void
        +rent() void
        +registerCustomer() void
    }
    class Main {
        +main(String[])$ void
    }

    Vehicle <|-- Car : inheritance
    Vehicle <|-- Truck : inheritance
    Vehicle <|-- Motorcycle : inheritance
    RentalAgreement --> Vehicle : has-a
    RentalAgreement --> Customer : has-a
    RentalAgreement ..> CostCalculator : uses
    RentalShop o-- Vehicle : holds
    RentalShop o-- Customer : holds
    RentalShop *-- RentalAgreement : owns
    Menu *-- RentalShop : runs
    Main ..> Menu : starts
